--- a/color.html
+++ b/color.html
@@ -23,12 +23,7 @@
         </select>
         <button type="submit" id="btn-el">Generate color</button>
       </div>
-      <div class="color-palette" id="color-palette">
-        <!-- <div class="color-section">
-                    <div class="color-column" id="color-column"></div>
-                    <p class="hex-box"></p>
-                </div> -->
-      </div>
+      <div class="color-palette" id="color-palette"></div>
     </main>
     <script src="index.js"></script>
   </body>
