--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>COLOR API</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -9,6 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/1a05f0c3f1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main>
@@ -23,7 +28,9 @@
           <option value="analogic-complement">Analogic-complement</option>
           <option value="triad">Triad</option>
         </select>
-        <button type="submit" id="btn-el">Generate color</button>
+        <button type="submit" id="btn-el">
+          <i class="fa-solid fa-palette"></i>
+        </button>
       </div>
       <div class="color-palette" id="color-palette"></div>
     </main>
